--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,16 @@ body{
     font-family: 'Montserrat', 
     sans-serif;
 }
+
+
+.container{
+    padding-left: 1rem;
+    padding-right:1 rem;
+
+}
+
+.container-center{
+    max-width:600px;
+    margin: auto;
+}
+
