--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,10 @@ body{
     border: 1px solid var
 }
 
-li {
-    display: inline-block;
-    
-  }
-
+.list-non-bullet{
+    list-style:none;
+}
+.list-item-inline{
+    display: inline;
+    padding:0rem 0.5rem;
+}
