--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,23 @@ body{
     display: inline;
     padding:0rem 0.5rem;
 }
+
+.navigation{
+    background-color: var(--primary-color);
+    color:white;
+    padding: 1rem;
+    border-bottom-left-radius:1rem ;
+
+}
+.navigation .nav-brand{
+    font-weight:bold;
+    font-size:1.4rem;
+}
+
+.navigation.nav-pills{
+    text-align: right;
+}
+.navigation .link{
+    color:aliceblue;
+
+    }
